# ros-playground

./: INSTRUCTIONS.md  README.md  launch_planning.sh  launch_sim.sh
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: AddThreeInts.srv
src/isaac_sim/: launch.py  package.xml  setup.cfg  setup.py
src/isaac_sim/isaac_sim/: demo.py  node.py
src/isaacsim/: package.xml  setup.cfg  setup.py
src/isaacsim/isaacsim/: node.py
src/panda_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_arm_config/config/: fr3.srdf
src/panda_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/planning/: CMakeLists.txt  launch.py  package.xml
src/planning/src/: node.cpp
